<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.Login">


    <ProgressBar
        android:id="@+id/cargandoRegistro"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        android:indeterminate="true"/>

    <EditText
        android:id="@+id/regNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/regNombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnEntrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/regEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/regNombre"
        app:layout_constraintTop_toBottomOf="@+id/regNombre"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/confEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/confEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/regEmail"
        app:layout_constraintTop_toBottomOf="@+id/regEmail"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/regContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/regContraseña"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/confEmail"
        app:layout_constraintTop_toBottomOf="@+id/confEmail"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/confContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/confContraseña"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/regContraseña"
        app:layout_constraintTop_toBottomOf="@+id/regContraseña"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btnRegistrar"
        app:layout_constraintStart_toStartOf="@+id/regCodigoEmpresa"
        app:layout_constraintTop_toBottomOf="@+id/regCodigoEmpresa"
        android:layout_marginStart="56dp" />

    <EditText
        android:id="@+id/regCodigoEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/regCodigo"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/confContraseña"
        app:layout_constraintTop_toBottomOf="@+id/confContraseña"
        tools:ignore="Autofill"
        tools:targetApi="o" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:hint="@string/siTiene"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEntrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btnEntrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>