<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    >
    <TextView
        android:id="@+id/comemail"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_email"
        android:text="@string/action_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ActionItem"

        />
    <TextView
        android:id="@+id/comdescargar"
        android:drawableStart="@drawable/ic_descargar"
        android:text="@string/action_descargar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comemail"
        style="@style/ActionItem"
        />
    <TextView
        android:id="@+id/comimprimir"
        android:drawableStart="@drawable/ic_imprimir"
        android:text="@string/action_imprimir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comdescargar"
        style="@style/ActionItem"
        />
</androidx.constraintlayout.widget.ConstraintLayout>