<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.empleados.generarRegistroEmpleados">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/viewGrey4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="#B0000000"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/ic_ayuda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="#01407B"
            android:backgroundTint="#01407B"
            android:src="@drawable/ic_ayuda"
            app:borderWidth="0dp"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/ic_regis"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:backgroundTint="#01407B"
            android:padding="0dp"
            android:scaleType="center"
            android:visibility="invisible"
            app:borderWidth="0dp"
            app:elevation="4dp"
            app:fabCustomSize="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="56dp"
            app:srcCompat="@drawable/ic_regis_grand" />

        <ImageView
            android:id="@+id/alerta_ayuda_Registro"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_above="@+id/ayuda_generar_registro"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/ayuda_salir"
            android:src="@drawable/ic_alerta_ayuda"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/ayuda_generar_registro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/ayuda_generar_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_snackbar"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/ayuda_general_emples"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/ic_regis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/ayuda_texto_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_snackbar"
            android:padding="5dp"
            android:text="@string/ayuda_generar_registro"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_regis" />

        <TextView
            android:id="@+id/ayuda_salir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_snackbar"
            android:padding="5dp"
            android:text="@string/ayuda_salir"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/ic_ayuda"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>